ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hive-frontend
  namespace: hive
spec:
  selector:
    app: hive-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hive-backend
  namespace: hive
spec:
  selector:
    app: hive-backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hive-backend-ws
  namespace: hive
spec:
  selector:
    app: hive-backend
  ports:
    - name: http
      protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: hive
spec:
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
